        "Polygon edge not found".

    o	str() is no longer slow for large POSIXct objects.
	Its output is also slightly more compact for such; implementation
	via new optional argument 'give.head'.

    o	strsplit(*, fixed=TRUE), potentially iconv() and internal string
	formatting is now faster for large strings, thanks to report
	PR#9902 by John Brzustowski.

    o   de.restore() gave spurious warning for matrices (Ben Bolker)
    
    o	plot(fn, xlim=c(a,b)) would not set "from" and "to" properly
	when plotting a function.  The argument lists to curve() and
	plot.function() have been modified slightly as part of the
	fix.

    o   old.packages, and hence update.packages, incorrectly handled
        duplicate packages when multiple package repositories are
        specified.  The first package encountered was selected, not
        the one with highest version number.  This has been fixed.



	**************************************************
	*						 *
	*	       2.5 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.5.1 patched

INSTALLATION

    o	doc/manual now includes the texinfo support file epsf.tex which
	basic TeX installations often omit.


BUG FIXES

    o   Attempting to do in-memory serialization of an object requiring
	more than 1Gb might have failed.

    o   Using formals<- on a function whose body was NULL worked
	incorrectly.  (PR#9758)

    o   logb() is now strictly a wrapper for log(), so if S4 methods
	are set on log(), logb() will also dispatch on them.

    o	conflicts(where=) did not work correctly. (PR#9760)

    o	log(x, base) was intended to handle complex 'base' even for
	real 'x', but there was a typo in the code to do so.

    o	Syntax errors would sometimes misreport the error context.

    o	qt(p, df=1) is now also correct for very small p. (PR#9804)
	qt(p, df=2) ditto; also is more accurate for  0 < |p - 0.5| << 1.