@@ -4872,7 +4872,13 @@ res <- match.arg(x,y, several.ok = TRUE) # error
 stopifnot(identical(res, y))
 ## failed in 2.5.1
 
+
 ## sweep() must work with 0-extent matrix/STATS :
 m <- matrix(1:5, 5,0)
 stopifnot(identical(m, sweep(m, 2, apply(m,2, min))))
 ## failed in R-devel around 2007-08-31
+
+
+## julian with POSIXlt origin (PR#9908)
+julian(as.POSIXlt("1999-2-1"), origin=as.POSIXlt("1999-1-1"))
+## failed < 2.6.0
